# position-bias

./: .env  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  empirical.sh  pyproject.toml  rollout.sh
config/empirical/: example.yaml
config/empirical/alibi/: bloom-1024.yaml  bloom-2048.yaml  bloom-256.yaml  bloom-512.yaml  bloom-64.yaml  bloom-7b1-1024.yaml  bloom-7b1-2048.yaml  bloom-7b1-256.yaml  bloom-7b1-512.yaml  bloom-7b1-64.yaml  falcon-rw-7b-1024.yaml  falcon-rw-7b-2048.yaml  falcon-rw-7b-256.yaml  falcon-rw-7b-512.yaml  falcon-rw-7b-64.yaml  mpt-30B-1024.yaml  mpt-30B-2048.yaml  mpt-30B-256.yaml  mpt-30B-512.yaml  mpt-30B-64.yaml  mpt-7b-1024.yaml  mpt-7b-2048.yaml  mpt-7b-256.yaml  mpt-7b-512.yaml  mpt-7b-64.yaml
config/rollout/: example.yaml
config/rollout/alibi/all_content/dclm/: bloom-7b1.yaml  bloom.yaml  (+3 more)
config/rollout/alibi/no_content/: bloom-7b1-noresidual.yaml  bloom-7b1.yaml  bloom-noresidual.yaml  bloom.yaml  falcon-rw-7b-noresidual.yaml  falcon-rw-7b.yaml  mpt-30b-noresidual.yaml  mpt-30b.yaml  mpt-7b-noresidual.yaml  mpt-7b.yaml
src/: __init__.py  dataset.py  dataset_wrapper.py  main.py
src/metrics/: __init__.py  metrics.py
src/models/: __init__.py  bloom.py  falcon.py  mpt.py  wrap.py
src/rollout/: __init__.py  attention.py  content_prior.py  lambda_schedule.py  main.py  mask.py  positional_encoding.py  util.py
src/util/: configs.py  hooks.py  pydantic.py
src/visualization/: attention_heatmap.ipynb  attention_monotone.ipynb  attention_stats.ipynb  influence_stats.ipynb  input_token_influence.ipynb  lambda_schedule.ipynb
(+17 files in other folders)
